--- a/question_evaluation/evaluation.ipynb
+++ b/question_evaluation/evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_SUBJ = 37\n",
+    "N_SUBJ = 38\n",
     "DATA_LOC = \"survey_data.csv\"\n",
     "pd.options.display.max_colwidth = 10000"
    ]
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,8 @@
       "[INFO] Processing participant 33, index 56...\n",
       "[INFO] Processing participant 34, index 57...\n",
       "[INFO] Processing participant 35, index 58...\n",
-      "[INFO] Processing participant 36, index 59...\n"
+      "[INFO] Processing participant 36, index 59...\n",
+      "[INFO] Processing participant 37, index 60...\n"
      ]
     },
     {
@@ -1262,9 +1263,33 @@
        "      <td>FL_51|FL_66</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>2021-12-22 04:58:59</td>\n",
+       "      <td>2021-12-22 06:53:23</td>\n",
+       "      <td>IP Address</td>\n",
+       "      <td>137.56.59.166</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6864</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2021-12-22 06:53:24</td>\n",
+       "      <td>R_26aHpawLzX664IB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Agree</td>\n",
+       "      <td>Disagree</td>\n",
+       "      <td>Agree</td>\n",
+       "      <td>Disagree</td>\n",
+       "      <td>Agree</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FL_81</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FL_75|FL_59</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37 rows × 120 columns</p>\n",
+       "<p>38 rows × 120 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1306,6 +1331,7 @@
        "57  2021-11-26 02:00:38  2021-11-26 03:50:53  IP Address   137.56.56.202   \n",
        "58  2021-11-26 05:23:40  2021-11-26 06:53:25  IP Address   137.56.56.202   \n",
        "59  2021-12-03 02:09:54  2021-12-03 04:13:12  IP Address    137.56.58.17   \n",
+       "60  2021-12-22 04:58:59  2021-12-22 06:53:23  IP Address   137.56.59.166   \n",
        "\n",
        "   Progress Duration (in seconds) Finished         RecordedDate  \\\n",
        "23      100                 11609     True  2021-09-22 04:01:52   \n",
@@ -1345,6 +1371,7 @@
        "57      100                  6615     True  2021-11-26 03:50:54   \n",
        "58      100                  5385     True  2021-11-26 06:53:26   \n",
        "59      100                  7398     True  2021-12-03 04:13:13   \n",
+       "60      100                  6864     True  2021-12-22 06:53:24   \n",
        "\n",
        "           ResponseId RecipientLastName  ...                       Use2R  \\\n",
        "23  R_2EmayCZt6OCt46k               NaN  ...                       Agree   \n",
@@ -1384,6 +1411,7 @@
        "57  R_1o7HIb7q3pPSrDV               NaN  ...                    Disagree   \n",
        "58  R_3EAb7Bk7shKjphu               NaN  ...  Neither agree nor disagree   \n",
        "59  R_1pDM8wekbD44dwG               NaN  ...  Neither agree nor disagree   \n",
+       "60  R_26aHpawLzX664IB               NaN  ...                       Agree   \n",
        "\n",
        "                         Load1                        ENG1  \\\n",
        "23           Strongly disagree                         NaN   \n",
@@ -1423,6 +1451,7 @@
        "57                    Disagree                       Agree   \n",
        "58           Strongly disagree                       Agree   \n",
        "59           Somewhat disagree  Neither agree nor disagree   \n",
+       "60                    Disagree                       Agree   \n",
        "\n",
        "                          ENG2                        ENG3  \\\n",
        "23                         NaN                         NaN   \n",
@@ -1462,6 +1491,7 @@
        "57              Somewhat agree              Strongly agree   \n",
        "58                       Agree                       Agree   \n",
        "59                    Disagree                       Agree   \n",
+       "60                    Disagree                       Agree   \n",
        "\n",
        "   VB_P2 - Parent Topics VB_P2 - Topics FL_87_DO     FL_72_DO     FL_81_DO  \n",
        "23                   NaN            NaN    FL_72  FL_51|FL_66          NaN  \n",
@@ -1501,11 +1531,12 @@
        "57                   NaN            NaN    FL_81          NaN  FL_75|FL_59  \n",
        "58                   NaN            NaN    FL_72  FL_51|FL_66          NaN  \n",
        "59                   NaN            NaN    FL_72  FL_51|FL_66          NaN  \n",
+       "60                   NaN            NaN    FL_81          NaN  FL_75|FL_59  \n",
        "\n",
-       "[37 rows x 120 columns]"
+       "[38 rows x 120 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
